# oracle-to-excel

./: .coverage  .env  .env.example  .gitignore  LICENSE  README.md  improved_plan.txt  main.py  makefile  plan.txt  plan_project.txt  pyproject.toml  setup.cfg  test.log1  test.log2  test_mask_debug.py  test_mask_quick.py  test_masking.py  updated_plan.txt
.github/: copilot-instructions.md
src/oracle_to_excel/: .env  OIL_NC_06gr.xlsx  OIL_NC_06gr1_1.xlsx  __init__.py  config.py  database.py  database_refactored.py  env_config.py  error_handler.py  lice.sqlite3  logger.py  main.py  oracle.py  report_excel_sn.csv  transformers.py
src/oracle_to_excel/queries/: __init__.py  base.py  oracle.py
temp/: __init__.py  config.py  config.py1  config_old.py1  copilot-instructions.md  database.py1  database_refactored.py  delphi.txt  env.example  env_config.py  env_config_22.11.25.py  env_config_23.11.25.py  git.txt  import_driver.py  improved_plan.txt  improved_plan_18.11.25.txt  main.py  passwd.py  prompt_common  prompt_config_env  prompt_create_project  prompt_export  prompt_modify_project  prompt_project  prompt_tests  report_excel_sn.csv  Все о формировании аналитических отчетов.txt  Все о формировании тематических отчетов.txt
temp/queries/: postgresql.py  sqlite.py
tests/: conftest.py  test_config.py  test_database.py  test_env_config.py  test_env_config.txt  test_logger.py
