[project]
name = "oracle-to-excel"
version = "0.1.0"
description = "Export Oracle REPORT_EXCEL_SN table data to Excel with logging and error handling"
authors = [
    {name = "zovcrru", email = "zargarova@crru.ru"},
]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "oracledb>=2.4.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
oracle-to-excel = "oracle_to_excel:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
oracle-to-excel = { path = "src/oracle_to_excel" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=src/oracle_to_excel --cov-report=html"