[project]
name = "oracle-to-excel"
version = "0.1.0"
description = "Export Oracle REPORT_EXCEL_SN table data to Excel with logging and error handling"
authors = [
    {name = "zovcrru", email = "zargarova@crru.ru"},
]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "oracledb>=2.4.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
]

docs = [
    "sphinx>=7.3.0,<8.1.0",
    "sphinx-autodoc-typehints>=2.0.0,<3.0.0",
    "m2r2>=0.3.0,<1.0.0",
    "tomli>=2.2.0,<3.0.0",
    "doc8>=1.1.0,<2.0.0",
]
[project.scripts]
oracle-to-excel = "oracle_to_excel:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
oracle-to-excel = { path = "src/oracle_to_excel" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=src/oracle_to_excel --cov-report=html"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # maccabe
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "ERA",  # flake8-eradicate
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "FLY",  # pyflint
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simpify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "A005",   # allow to shadow stdlib and builtin module names
    "COM812", # trailing comma, conflicts with `ruff format`
    "D100",
    "D104",
    "D106",
    "D203",
    "D212",
    "D401",
    "D404",
    "D405",
    "E501",    # Avoid enforcing line-length violations (`E501`)
    "ISC001",  # implicit string concat conflicts with `ruff format`
    "ISC003",  # prefer explicit string concat over implicit concat
    "PLR09",   # we have our own complexity rules
    "PLR2004", # do not report magic numbers
    "PLR6301", # do not require classmethod / staticmethod when self not used
    "S608",    # hardcoded-sql-expression
    "TRY003",  # long exception messages from `tryceratops"
]
external = ["WPS"]
unfixable = ["B"]
allowed-confusables = ["с", "р", "о"]

flake8-import-conventions.banned-from = ["ast"]
flake8-quotes.inline-quotes = "double"
mccabe.max-complexity = 6
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101", # asserts
    "S105", # hardcoded passwords
    "S404", # subprocess calls are for tests
    "S603", # do not require `shell=True`
    "S607", # partial executable paths
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = false
